Fixed a canvas z-index problem

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -137,7 +137,7 @@ h1 {
 
 /* canvas that the local user is drawing onto. Remote users draw onto seperate canvases */
 #drawing_canvas, #drawing_canvas_preview {
-	z-index: 20000000010;
+	z-index: 2000000010;
 	position: absolute;
 	top: 0px;
 	left: 0px;
